[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A few warm-up games for your brain"
authors = [
    "Andrei Emelianenko <sliitvein@gmail.com>"
    ]
readme = "README.md"
repository = "https://github.com/thiSSSnake/python-project-49"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.welcome:main"
brain-even = "brain_games.scripts.brain_even:game"
brain-calc = "brain_games.scripts.brain_calc:game"
brain-gcd = "brain_games.scripts.brain_gcd:game"
brain-progression = "brain_games.scripts.brain_progression:game"
brain-prime = "brain_games.scripts.brain_prime:prime_or_not"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
