[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A few warm-up games for your brain"
authors = [
    "Andrei Emelianenko <sliitvein@gmail.com>"
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]
readme = "README.md"
repository = "https://github.com/thiSSSnake/python-project-49"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.welcome:main"
brain-even = "brain_games.scripts.brain_even:launch"
brain-calc = "brain_games.scripts.brain_calc:launch"
brain-gcd = "brain_games.scripts.brain_gcd:launch"
brain-progression = "brain_games.scripts.brain_progression:launch"
brain-prime = "brain_games.scripts.brain_prime:launch"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
